feat: naver map marker

--- a/local.properties
+++ b/local.properties
@@ -5,3 +5,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon May 13 02:41:56 KST 2024
+sdk.dir=C\:\\Users\\s_kelsey6225\\AppData\\Local\\Android\\Sdk
+naver_client_id = "wqgv2yjjtq"
+m_client_id = wqgv2yjjtq
