--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 13 02:41:56 KST 2024
-sdk.dir=C\:\\Users\\s_kelsey6225\\AppData\\Local\\Android\\Sdk
-naver_client_id = "wqgv2yjjtq"
-m_client_id = wqgv2yjjtq
+#Mon May 13 20:51:36 KST 2024
+m_client_id=wqgv2yjjtq
+naver_client_id="wqgv2yjjtq"
+sdk.dir=/Users/a82108/Library/Android/sdk
