--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 17 16:06:55 KST 2024
+#Fri May 17 16:11:38 KST 2024
 m_client_id=wqgv2yjjtq
 naver_client_id="wqgv2yjjtq"
-sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\cjja0\\AppData\\Local\\Android\\Sdk
