--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 m_client_id=wqgv2yjjtq
 naver_client_id="wqgv2yjjtq"
 sdk.dir=/Users/a82108/Library/Android/sdk
+base.url="http://34.64.233.12:8080/"
