fix: base_url 주소 수정

--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 13 20:51:36 KST 2024
+#Fri May 31 17:44:01 KST 2024
+base.url="http://44.215.48.254:8080/"
 m_client_id=wqgv2yjjtq
 naver_client_id="wqgv2yjjtq"
-sdk.dir=/Users/a82108/Library/Android/sdk
-base.url="http://34.64.233.12:8080/"
+sdk.dir=C\:\\Users\\s_kelsey6225\\AppData\\Local\\Android\\Sdk
