--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 02 18:09:01 KST 2024
+#Mon Jun 03 00:31:41 KST 2024
 base_url="http\://44.215.48.254\:8080/"
 m_client_id=wqgv2yjjtq
 naver_client_id="wqgv2yjjtq"
-sdk.dir=C\:\\Users\\admine\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/a82108/Library/Android/sdk
