--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 03 15:58:55 KST 2024
-base_url="http\://44.215.48.254\:8080/"
+#Fri May 31 17:44:01 KST 2024
+base_url="http://44.215.48.254:8080/"
 m_client_id=wqgv2yjjtq
 naver_client_id="wqgv2yjjtq"
 sdk.dir=C\:\\Users\\admine\\AppData\\Local\\Android\\Sdk
