--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableJetifier=true
 android.defaults.buildfeatures.buildconfig=true
+unityStreamingAssets=.unity3d, google-services-desktop.json, google-services.json, GoogleService-Info.plist
