--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ naverMapSdk = "3.18.0"
 navigationCompose = "2.7.7"
 playServicesLocation = "21.2.0"
 datastoreCoreAndroid = "1.1.1"
+inputmapping = "1.1.0-beta"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,7 @@ naver-map-location = { module = "io.github.fornewid:naver-map-location", version
 naver-map-sdk = { module = "com.naver.maps:map-sdk", version.ref = "naverMapSdk" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
+inputmapping = { group = "com.google.android.libraries.play.games", name = "inputmapping", version.ref = "inputmapping" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
