--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 base.url="http\://44.215.48.254\:8080/"
 m_client_id=wqgv2yjjtq
 naver_client_id="wqgv2yjjtq"
-sdk.dir=C\:\\Users\\admine\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/beom/Library/Android/sdk
